[gd_scene load_steps=10 format=3 uid="uid://bqxiw6ry3gxnl"]

[ext_resource type="PackedScene" uid="uid://c0n8l4kpqx2bo" path="res://scenes/inventory_ui.tscn" id="1_inventory"]
[ext_resource type="Script" path="res://scripts/gamemanager.gd" id="3_jyhfs"]
[ext_resource type="Script" path="res://scripts/control.gd" id="4_jyhfs"]
[ext_resource type="Script" path="res://scripts/startup.gd" id="5_startup"]
[ext_resource type="Script" path="res://scripts/camera_test.gd" id="6_camera_test"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 18
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3"]
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node3D"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="Environment" type="Node" parent="."]

[node name="Players" type="Node" parent="."]

[node name="Human" type="CharacterBody3D" parent="Players"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1, 0)

[node name="Ghost" type="CharacterBody3D" parent="Players"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1, 0)

[node name="Items" type="Node" parent="."]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_jyhfs")

[node name="Startup" type="Node" parent="."]
script = ExtResource("5_startup")

[node name="CameraTest" type="Node" parent="."]
script = ExtResource("6_camera_test")

[node name="UI" type="Node" parent="."]

[node name="GhostViewportContainer" type="SubViewportContainer" parent="UI"]
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameUI" type="Control" parent="UI"]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_jyhfs")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0
grow_vertical = 0

[node name="TimerLabel" type="Label" parent="UI/GameUI/VBoxContainer"]
layout_mode = 2
text = "时间: 03:00"
label_settings = SubResource("LabelSettings_1")

[node name="ItemLabel" type="Label" parent="UI/GameUI/VBoxContainer"]
layout_mode = 2
text = "减速陷阱: 3"
label_settings = SubResource("LabelSettings_1")

[node name="ControlsLabel" type="Label" parent="UI/GameUI/VBoxContainer"]
layout_mode = 2
text = "人类: WASD移动, 空格跳跃, E使用陷阱
鬼魂: IJKL移动, R视角, 左键攻击"
label_settings = SubResource("LabelSettings_2")

[node name="MessageLabel" type="Label" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_3")
horizontal_alignment = 1

[node name="GameOverPanel" type="Panel" parent="UI/GameUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameUI/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageLabel" type="Label" parent="UI/GameUI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "游戏结束"
label_settings = SubResource("LabelSettings_3")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameUI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "重新开始"

[node name="InventoryUI" parent="UI/GameUI" instance=ExtResource("1_inventory")]
layout_mode = 1

[node name="GhostViewport" type="SubViewport" parent="."]
size = Vector2i(960, 540)
render_target_clear_mode = 2

[node name="GhostCamera" type="Camera3D" parent="GhostViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
current = true